# full-stack-template

./: .env  README.md  docker-compose.yml
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py  models.py  schemas.py
backend/app/api/: deps.py  main.py
backend/app/api/v1/: api_v1.py
backend/app/api/v1/endpoints/: login.py  users.py
backend/app/core/: celery_app.py  config.py  db.py  logger.py  security.py
backend/app/core/vectorstores/: embeddings.py
backend/app/providers/: storage.py
backend/app/services/: agent.py  user_service.py
backend/app/tasks/: notify_task.py
backend/app/utils/: check_result.py  helpers.py
backend/app/workers/: celery_app.py
backend/myproject/: main.py
backend/myproject/api/api/v1/: main.py
backend/myproject/core/: celery_app.py  config.py  logger.py
frontend/: Dockerfile  package.json
libs/myproject/: main.py
libs/myproject/api/v1/: api_v1.py
libs/myproject/api/v1/routes/: chat_bot_api.py
libs/myproject/api/v1/schemas/: chat_bot_schema.py
libs/myproject/core/: config.py  dependency.py  logger.py
libs/myproject/tasks/: notify_task.py
libs/myproject/utils/: helpers.py
